--- a/package.json
+++ b/package.json
@@ -10,6 +10,22 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^2.9.6"
+    "@astrojs/alpinejs": "^0.2.2",
+    "@astrojs/image": "^0.17.2",
+    "@astrojs/partytown": "^1.2.3",
+    "@astrojs/prefetch": "^0.3.0",
+    "@astrojs/sitemap": "^2.0.1",
+    "@astrojs/tailwind": "^4.0.0",
+    "@fontsource-variable/eb-garamond": "^5.0.6",
+    "@types/alpinejs": "^3.0.0",
+    "alpinejs": "^3.0.0",
+    "astro": "^2.9.6",
+    "astro-icon": "^0.8.1",
+    "autoprefixer": "^10.4.14",
+    "cssnano": "^6.0.1",
+    "tailwindcss": "^3.0.24"
+  },
+  "devDependencies": {
+    "@tailwindcss/typography": "^0.5.9"
   }
 }
