--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "astro-icon": "^0.8.1",
     "autoprefixer": "^10.4.14",
     "cssnano": "^6.0.1",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss": "^3.0.24"
   },
   "devDependencies": {
